<resources>
    <string name="app_name">HKHC Inventory</string>

    <string name="scan_barcode_button">Scan</string>
    <string name="submit_button">Submit</string>
    <string name="no_barcode_captured">沒有掃描到條碼</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="connection_error">獲取產品失敗</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">確認</string>
    <string name="cancel">取消</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="background_img">background_img</string>
    <string name="add_new">添加新產品</string>
    <string name="gtin_or_product_name">GTIN編號或產品名稱：</string>
    <string name="product_name">產品名稱：</string>
    <string name="product_number">產品編號：</string>
    <string name="gtin">GTIN：</string>
    <string name="lot">批次號：</string>
    <string name="exp">到期日：</string>
    <string name="quantity">存量：</string>
    <string name="history">history</string>
    <string name="title_search">title_search</string>
    <string name="button_scan">button_scan</string>
    <string name="button">Button</string>
    <string name="separate">separate</string>
    <string name="bottom_buttons">bottom_buttons</string>
    <string name="psw">密碼：</string>
    <string name="phone">電話號碼：</string>
    <string name="dis">免責聲明：</string>
    <string name="read">本人已閱讀並同意有關聲明。</string>
    <string name="login_error">用戶名或密碼錯誤</string>
    <string name="sup_log">補貨記錄</string>
    <string name="all_log">所有記錄</string>
    <string name="usage_log">使用記錄</string>
    <string name="title_history">title_history</string>
    <string name="title_bar">title_bar</string>
    <string name="supplier">供應商：</string>
    <string name="number">編號：</string>
    <string name="gift_quantity">贈送量：</string>
    <string name="sup_qty">補充量：</string>
    <string name="unit_price">單價：</string>
    <string name="total_price">合共價格：</string>
    <string name="inv">INV：</string>
    <string name="remark">備註：</string>
    <string name="title_new">title_new</string>
    <string-array name="consume_reason">
        <item>使用</item>
        <item>過期</item>
        <item>損壞</item>
        <item>丟棄</item>
        <item>其他：請填寫備註</item>
    </string-array>

</resources>