<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/title_bar"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/header" />

    <ImageView
        android:id="@+id/img_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/img_header"
        android:adjustViewBounds="true"
        android:contentDescription="@string/title_new"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/home_new" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/img_title"
        android:adjustViewBounds="true"
        android:contentDescription="@string/separate"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/home_4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView3"
        android:background="#F2F2F2">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="80dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/btn_confirm"
            android:background="@drawable/btn_cancel" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="80dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_confirm" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/product_name" />

                    <EditText
                        android:id="@+id/txt_pdname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="-5dp"
                        android:layout_marginTop="-10dp"
                        android:layout_toEndOf="@+id/textView8"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:labelFor="@+id/txt_pdname"
                        android:lines="2" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_sup3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="7dp"
                        android:layout_toEndOf="@+id/txt_supplier"
                        android:text="@string/number" />

                    <EditText
                        android:id="@+id/txt_suppid"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_toEndOf="@+id/txt_sup3"
                        android:ems="10"
                        android:inputType="number"
                        android:labelFor="@+id/txt_suppid"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_supp"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/supplier" />

                    <AutoCompleteTextView
                        android:id="@+id/txt_supplier"
                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="-5dp"
                        android:layout_marginTop="1dp"
                        android:layout_toEndOf="@+id/txt_supp"
                        android:labelFor="@id/txt_supplier" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/txt_pdgtin"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="-5dp"
                        android:layout_marginTop="1dp"
                        android:layout_toEndOf="@+id/textView14"
                        android:ems="10"
                        android:inputType="text"
                        android:labelFor="@id/txt_pdgtin"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/gtin" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/txt_lot"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="-5dp"
                        android:layout_marginTop="1dp"
                        android:layout_toEndOf="@+id/txt_3"
                        android:ems="10"
                        android:inputType="text"
                        android:labelFor="@id/txt_lot"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_3"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"

                        android:layout_marginTop="10dp"
                        android:text="@string/lot" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/txt_exp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="-5dp"
                        android:layout_marginTop="1dp"
                        android:layout_toEndOf="@+id/txt_5"
                        android:ems="10"
                        android:inputType="text"
                        android:labelFor="@id/txt_exp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_5"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/exp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/rl_gift"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/txt_actqty">

                        <EditText
                            android:id="@+id/txt_gift"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@+id/txt_sup2"
                            android:ems="10"
                            android:inputType="number"
                            android:labelFor="@id/txt_gift"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txt_sup2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/gift_quantity" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/txt_sup"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/sup_qty" />

                    <EditText
                        android:id="@+id/txt_actqty"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="-5dp"
                        android:layout_marginTop="1dp"
                        android:layout_toEndOf="@+id/txt_sup"
                        android:ems="10"
                        android:inputType="number"
                        android:labelFor="@id/txt_actqty"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/txt_ttp"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="-5dp"
                        android:layout_marginTop="1dp"
                        android:layout_toEndOf="@+id/txt_"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:labelFor="@id/txt_ttp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_unp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/txt_ttp"
                        android:text="@string/unit_price" />

                    <TextView
                        android:id="@+id/txt_"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/total_price" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_inv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/txt_inv"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="-5dp"
                        android:layout_marginTop="1dp"
                        android:layout_toEndOf="@+id/txt_4"
                        android:ems="10"
                        android:inputType="text"
                        android:labelFor="@id/txt_inv"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_4"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/inv" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/txt_remark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textView4"
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:gravity="top|start"
                        android:inputType="textMultiLine"
                        android:labelFor="@id/txt_remark"
                        android:lines="3"
                        android:textAlignment="gravity" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="5dp"
                        android:text="@string/remark" />
                </RelativeLayout>

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

    </RelativeLayout>
